Se aplican los saltos de línea a los titulos de los modales, por solicitud de Sandra

--- a/servicios.html
+++ b/servicios.html
@@ -103,7 +103,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"> <a data-bs-dismiss="modal" aria-label="Close"><img src="images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">DISEÑO DE CUARTO DE MÁQUINAS</p>
+                    <p class="modal-title" id="exampleModalLabel">DISEÑO DE CUARTO <br>DE MÁQUINAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -238,7 +238,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">CONVERSIÓN DE COMBUSTIBLES A CALDERAS</p>
+                    <p class="modal-title" id="exampleModalLabel">CONVERSIÓN DE <br>COMBUSTIBLES A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -338,7 +338,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">CURSO BÁSICO DE OPERACIÓN A CALDERAS</p>
+                    <p class="modal-title" id="exampleModalLabel">CURSO BÁSICO DE OPERACIÓN <br>A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
