--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item active">
             <picture class="carousel-item__img">
               <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
               <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
             </picture>
             <div class="slideB__Content"> 
               <div class="slideB__Content__box">
-                <p>SOMOS <strong>ESPECIALISTAS EN CALDERAS</strong></p><img class="img-fluid slideB_logoCleaver" src="images/Marcas/Cleaver.png"/><a class="slideB__Content__box-cta" href="contacto.html">Contáctenos</a>
+                <p>SOMOS <br/><strong>ESPECIALISTAS EN CALDERAS</strong></p><img class="img-fluid slideB_logoCleaver" src="images/Marcas/Cleaver.png"/><a class="slideB__Content__box-cta" href="contacto.html">Contáctenos</a>
               </div>
             </div>
           </div>
@@ -203,7 +203,7 @@
   </div>
 </div>
 <div class="marcas__propiedad"> 
-  <p>*Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, <br/><strong>SERVICIO TÉCNICO A CALDERAS</strong><br/> los utiliza con fines informativos e ilustrativos.</p>
+  <p>*Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, <strong>SERVICIO TÉCNICO A CALDERAS</strong> los utiliza con fines informativos e ilustrativos.</p>
 </div>
       </div>
       <p class="title">¿POR QUÉ ELEGIRNOS?</p>
