--- a/productos.html
+++ b/productos.html
@@ -84,7 +84,7 @@
   </div>
 </div>
 <div class="marcas__propiedad"> 
-  <p>*Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, <br/><strong>SERVICIO TÉCNICO A CALDERAS</strong><br/> los utiliza con fines informativos e ilustrativos.</p>
+  <p>*Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, <strong>SERVICIO TÉCNICO A CALDERAS</strong> los utiliza con fines informativos e ilustrativos.</p>
 </div>
       </div>
       <p class="title2">CATÁLOGO DE PRODUCTOS</p>
