Se termina de corregir los slides para propuesta

--- a/index.html
+++ b/index.html
@@ -44,6 +44,63 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             <picture class="carousel-item__img">
+              <source media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide1Desktop-1920x537.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide2-480x565.jpg"/>
+            </picture>
+            <div class="slideA__Content"> 
+              <div class="slideA__Content__box"><img class="img-fluid slideA_logo" src="images/SVG/logoSertec.svg"/>
+                <p>DISTRIBUIDOR Y CENTRO DE SERVICIO AUTORIZADO POR</p><img class="img-fluid slideA_logoTermiz" src="images/Marcas/logo_termiz_.png"/>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <picture class="carousel-item__img">
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
+            </picture>
+            <div class="slideB__Content"> 
+              <div class="slideB__Content__box">
+                <p>SOMOS <br/><strong>ESPECIALISTAS EN CALDERAS</strong></p><img class="img-fluid slideB_logoCleaver" src="images/Marcas/Cleaver.png"/><a class="slideB__Content__box-cta" href="contacto.html">Contáctenos</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <picture class="carousel-item__img">
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
+            </picture>
+            <div class="slide2__Content">
+              <div class="slide2__Content__box">
+                <p class="slide2__Content__box-line1">MANTENIMIENTO PREVENTIVO <br/>Y<br/> CORRECTIVO</p>
+                <p class="slide2__Content__box-line2">CONVERSIONES <br/>Y<br/> CARBURACIONES</p>
+                <p class="slide2__Content__box-line3">AUTOMATIZACIÓN <br/>DE<br/> CALDERAS</p><a class="slide2__Content__box-line4" href="servicios.html">Servicios</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <picture class="carousel-item__img">
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
+            </picture>
+            <div class="slide3__Content">
+              <div class="slide3__Content__box">
+                <p class="slide3__Content__box-line1">SUMINISTRO DE<br/><strong>REFACCIONES <br/> ORIGINALES</strong> </p><a class="slide3__Content__box-line2" href="productos.html">Productos</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <picture class="carousel-item__img">
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
+            </picture>
+            <div class="slide4__Content">
+              <div class="slide4__Content__box">
+                <p class="slide4__Content__box-line1">VENTA DE<br/><strong>CALDERAS</strong> </p><a class="slide4__Content__box-line2" href="calderas.html">Calderas</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <picture class="carousel-item__img">
               <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
               <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
             </picture>
