Se corrige la barra de se necesita asesoria y la imagen dde la caldera abajo de acerca de nosotros, todo en versión mobile

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
     <div class="index__contactenos">
       <picture> 
-        <source media="(min-width:768px)" srcset="images/PNG/fondoContactenos4.png"/><img class="img-fluid" src="images/PNG/fondoContactenos.jpg"/>
+        <source class="img-fluid" media="(min-width:768px)" srcset="images/PNG/fondoContactenos4.png"/><img class="img-fluid" src="images/PNG/fondoContactenos.jpg"/>
       </picture>
       <p>¿Necesita asesoría especializada para su empresa?</p>
     </div>
@@ -133,6 +133,7 @@
           <div class="index__area__acerca__box-video"></div>
           <div class="index__area__acerca__box-img">
             <picture> 
+              <source media="(min-width:1110px)" srcset="images/Caldera.jpg"/>
               <source media="(min-width:768px)" srcset="images/calderaIndex-tablet.jpg"/><img class="img-fluid" src="images/calderaIndex-mobile.jpg"/>
               <p>SOMOS <strong>EXPERTOS</strong> Y TENEMOS LA <strong>EXPERIENCIA</strong> EN CALDERAS</p>
             </picture>
