Correcciones realizadas 1,2,3,5,6. Está pendiente la 4 del archivo 2.pdf de la carpeta Cambios solicitados

--- a/contacto.html
+++ b/contacto.html
@@ -74,7 +74,7 @@
       <div class="contacto__convencer">
         <picture>
           <source media="(min-width:1110px)" srcset="/images/PNG/fondoContactenos-left-Desk.png"/>
-          <source media="(min-width:768px)" srcset="images/PNG/fondoContactenos-left.png"/><img class="img-fluid" src="images/PNG/fondoContactenos2.png" alt="Ingeniero con casco"/>
+          <source class="img-fluid" media="(min-width:768px)" srcset="images/PNG/fondoContactenos-left.png"/><img class="img-fluid" src="images/PNG/fondoContactenos2.png" alt="Ingeniero con casco"/>
         </picture>
         <p>Contáctenos y déjese convencer por nuestra amplia experiencia.</p>
       </div>
