--- a/productos.html
+++ b/productos.html
@@ -84,7 +84,7 @@
   </div>
 </div>
 <div class="marcas__propiedad"> 
-  <p>*Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, <strong>SERVICIO TÉCNICO A CALDERAS</strong> los utiliza con fines informativos e ilustrativos.</p>
+  <p>*Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, <br/> <strong>SERVICIO TÉCNICO A CALDERAS</strong> los utiliza con fines informativos e ilustrativos.</p>
 </div>
       </div>
       <p class="title2">CATÁLOGO DE PRODUCTOS</p>
@@ -500,7 +500,6 @@
       </div>
       <div class="footer__box">
         <div class="footer__box__body">
-          <div class="footer__box__body-logo"><img src="images/SVG/logoSertec.svg" alt="logotipo de SERTEC CALDERAS"/></div>
           <div class="footer__box__body-links">
             <ul> 
               <li><a href="index.html">INICIO</a></li>
