--- a/calderas.html
+++ b/calderas.html
@@ -103,7 +103,6 @@
       </div>
       <div class="footer__box">
         <div class="footer__box__body">
-          <div class="footer__box__body-logo"><img src="images/SVG/logoSertec.svg" alt="logotipo de SERTEC CALDERAS"/></div>
           <div class="footer__box__body-links">
             <ul> 
               <li><a href="index.html">INICIO</a></li>
@@ -145,5 +144,6 @@
     </footer>
     <script src="js/app-dist.js"></script>
     <script src="js/arriba.js"></script>
+    <script src="js/limpiar.js"></script>
   </body>
 </html>
