--- a/index.html
+++ b/index.html
@@ -150,19 +150,19 @@
         <p class="index__area__prioridad__title">En <strong>SERVICIO TÉCNICO A CALDERAS</strong> nuestra prioridad es usted por lo que le ofrecemos:</p>
         <div class="index__area__prioridad__items">
           <div class="index__area__prioridad__items-item">
-            <div class="box-img"> <img src="images/SVG/engrane.svg"/></div>
+            <div class="box-img"> <img class="img-fluid" src="images/SVG/engrane.svg"/></div>
             <div class="box-txt">
               <p>SERVICIOS</p><a href="servicios.html">Más información </a>
             </div>
           </div>
           <div class="index__area__prioridad__items-item index__area__prioridad__items-item-m">
-            <div class="box-img"><img src="images/SVG/manometro.svg"/></div>
+            <div class="box-img"><img class="img-fluid" src="images/SVG/manometro.svg"/></div>
             <div class="box-txt">
               <p>PRODUCTOS</p><a href="productos.html">Más información </a>
             </div>
           </div>
           <div class="index__area__prioridad__items-item">
-            <div class="box-img"> <img src="images/SVG/caldera.svg"/></div>
+            <div class="box-img"> <img class="img-fluid" src="images/SVG/caldera.svg"/></div>
             <div class="box-txt">
               <p>CALDERAS</p><a href="calderas.html">Más información</a>
             </div>
@@ -196,6 +196,15 @@
     <div class="carousel-item"> <img class="d-block w-100" src="images/carousel/3.jpg"/></div>
     <div class="carousel-item"><img class="d-block w-100" src="images/carousel/4.jpg"/></div>
     <div class="carousel-item">       <img class="d-block w-100" src="images/carousel/5.jpg"/></div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
+  </div>
+</div>
+<div class="carousel slide carousel__desktop" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active"><img class="d-block w-100" src="images/carousel/desktop/1.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/carousel/desktop/2.jpg"/></div>
+    <div class="carousel-item"> <img class="d-block w-100" src="images/carousel/desktop/3.jpg"/></div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
