--- a/productos.html
+++ b/productos.html
@@ -83,6 +83,15 @@
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
 </div>
+<div class="carousel slide carousel__desktop" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active"><img class="d-block w-100" src="images/carousel/desktop/1.jpg"/></div>
+    <div class="carousel-item"><img class="d-block w-100" src="images/carousel/desktop/2.jpg"/></div>
+    <div class="carousel-item"> <img class="d-block w-100" src="images/carousel/desktop/3.jpg"/></div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
+  </div>
+</div>
 <div class="marcas__propiedad"> 
   <p>*Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, <br/> <strong>SERVICIO TÉCNICO A CALDERAS</strong> los utiliza con fines informativos e ilustrativos.</p>
 </div>
