Se corrige tamaño de carousel de nuestros servicios en la seccion de servicios

--- a/productos.html
+++ b/productos.html
@@ -551,5 +551,6 @@
     <script src="js/app-dist.js"></script>
     <script src="js/arriba.js"></script>
     <script src="js/limpiar.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
