--- a/empresa.html
+++ b/empresa.html
@@ -46,7 +46,7 @@
             <source media="(min-width:1110px)" srcset="images/JPG/bannerSomos1920x600.jpg"/>
             <source media="(min-width:768px)" srcset="images/JPG/bannerSomos834x537.jpg"/><img class="img-fluid" src="images/JPG/bannerSomos428x374.jpg" alt="Ingeniero con casco"/>
           </picture>
-          <p class="banner-title">¿QUIÉNES <br/> <strong>SOMOS?</strong></p>
+          <p class="banner-title" id="salto">¿QUIÉNES <br/> <strong>SOMOS?</strong></p>
         </div>
       </div>
       <p class="title">NUESTRA HISTORIA</p>
@@ -164,5 +164,6 @@
     <script src="js/app-dist.js"></script>
     <script src="js/arriba.js"></script>
     <script src="js/limpiar.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
