--- a/index.html
+++ b/index.html
@@ -49,8 +49,55 @@
             </picture>
             <div class="slideA__Content"> 
               <div class="slideA__Content__box"><img class="img-fluid slideA_logo" src="images/SVG/logoSertec.svg"/>
-                <p>CENTRO DE SERVICIO</p>
-                <p>SOMOS ESPECIALISTAS EN CALDERAS CLEAVER BROOKS.</p><a class="slideA__Content__box-cta" href="contacto.html">Contáctenos</a>
+                <p class="slideA__Content__box-txtservicio">CENTRO DE SERVICIO</p>
+                <p class="slideA__Content__box-txtsomos">SOMOS ESPECIALISTAS EN CALDERAS CLEAVER BROOKS.</p><a class="slideA__Content__box-cta" href="contacto.html">Contáctenos</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <picture class="carousel-item__img">
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
+            </picture>
+            <div class="slide2__Content">
+              <div class="slide2__Content__box">
+                <p class="slide2__Content__box-line1">MANTENIMIENTO PREVENTIVO <br/>Y<br/> CORRECTIVO</p>
+                <p class="slide2__Content__box-line2">CONVERSIONES <br/>Y<br/> CARBURACIONES</p>
+                <p class="slide2__Content__box-line3">AUTOMATIZACIÓN <br/>DE<br/> CALDERAS</p><a class="slide2__Content__box-line4" href="servicios.html">Servicios</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <picture class="carousel-item__img">
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
+            </picture>
+            <div class="slide3__Content">
+              <div class="slide3__Content__box">
+                <p class="slide3__Content__box-line1">SUMINISTRO DE<br/><strong>REFACCIONES <br/> ORIGINALES</strong> </p><a class="slide3__Content__box-line2" href="productos.html">Productos</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <picture class="carousel-item__img">
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
+            </picture>
+            <div class="slide4__Content">
+              <div class="slide4__Content__box">
+                <p class="slide4__Content__box-line1">VENTA DE<br/><strong>CALDERAS</strong> </p><a class="slide4__Content__box-line2" href="calderas.html">Calderas</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <picture class="carousel-item__img">
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
+            </picture>
+            <div class="slide1__Content">
+              <div class="slide1__Content__box">
+                <p class="slide1__Content__box-line1">30 años</p>
+                <p class="slide1__Content__box-line2"><strong>DE EXPERIENCIA <br/>NOS RESPALDAN</strong> </p><a class="slide1__Content__box-line3" href="empresa.html">Conózcanos     </a>
               </div>
             </div>
           </div>
