--- a/servicios.html
+++ b/servicios.html
@@ -95,9 +95,13 @@
       <p class="title2">CATÁLOGO DE SERVICIOS </p>
       <div class="servicios__catalogo"> 
         <div class="servicios__catalogo__items"> 
-          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/disenoCuartoMaquinas500x458.jpg" alt=""/>
-            <p>DISEÑO DE CUARTO <br>DE MÁQUINAS</p>
-            <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#maquinasModal">Más Información</button>
+          <div class="servicios__catalogo__items-item">
+            <figure> <img class="img-fluid" src="images/serviciosMobile/disenoCuartoMaquinas500x458.jpg" alt=""/>
+              <div class="servicios__catalogo__items-item-capa capa">
+                <h3>DISEÑO DE CUARTO <br>DE MÁQUINAS</h3>
+                <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#maquinasModal">Más Información</button>
+              </div>
+            </figure>
             <div class="modal fade" tabindex="-1" aria-labelledby="maquinasModalLabel" aria-hidden="true" id="maquinasModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
@@ -120,9 +124,13 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/instalacionCalderas500x458.jpg"/>
-            <p>INSTALACIÓN DE CALDERAS <br/>Y <br/>EQUIPOS AUXILIARES</p>
-            <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#hollinModal">Más Información</button>
+          <div class="servicios__catalogo__items-item">
+            <figure> <img class="img-fluid" src="images/serviciosMobile/instalacionCalderas500x458.jpg"/>
+              <div class="servicios__catalogo__items-item-capa capa">
+                <h3>INSTALACIÓN DE CALDERAS <br/>Y <br/>EQUIPOS AUXILIARES</h3>
+                <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#hollinModal">Más Información</button>
+              </div>
+            </figure>
             <div class="modal fade" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" id="hollinModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
@@ -159,9 +167,13 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/MttoCalderas500x458.jpg" alt=""/>
-            <p>MANTENIMIENTO PREVENTIVO <br/>Y <br/>CORRECTIVO A CALDERAS</p>
-            <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#mttoModal">Más Información</button>
+          <div class="servicios__catalogo__items-item">
+            <figure><img class="img-fluid" src="images/serviciosMobile/MttoCalderas500x458.jpg" alt=""/>
+              <div class="servicios__catalogo__items-item-capa capa">
+                <h3>MANTENIMIENTO PREVENTIVO <br/>Y <br/>CORRECTIVO A CALDERAS</h3>
+                <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#mttoModal">Más Información</button>
+              </div>
+            </figure>
             <div class="modal fade" tabindex="-1" aria-labelledby="mttoModalLabel" aria-hidden="true" id="mttoModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
@@ -230,9 +242,13 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/conversionCalderas500x458.jpg"/>
-            <p>CONVERSIÓN DE <br>COMBUSTIBLES A CALDERAS</p>
-            <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#conversionModal">Más Información</button>
+          <div class="servicios__catalogo__items-item">
+            <figure><img class="img-fluid" src="images/serviciosMobile/conversionCalderas500x458.jpg"/>
+              <div class="servicios__catalogo__items-item-capa capa">
+                <h3>CONVERSIÓN DE <br>COMBUSTIBLES A CALDERAS</h3>
+                <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#conversionModal">Más Información</button>
+              </div>
+            </figure>
             <div class="modal fade" tabindex="-1" aria-labelledby="conversionModalLabel" aria-hidden="true" id="conversionModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
@@ -272,9 +288,13 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/quemadores500x458.jpg"/>
-            <p>MANTENIMIENTO PREVENTIVO <br/>Y<br/> CORRECTIVO A QUEMADORES</p>
-            <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#quemadoresModal">Más Información</button>
+          <div class="servicios__catalogo__items-item">
+            <figure><img class="img-fluid" src="images/serviciosMobile/quemadores500x458.jpg"/>
+              <div class="servicios__catalogo__items-item-capa capa">
+                <h3>MANTENIMIENTO PREVENTIVO <br/>Y<br/> CORRECTIVO A QUEMADORES</h3>
+                <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#quemadoresModal">Más Información</button>
+              </div>
+            </figure>
             <div class="modal fade" tabindex="-1" aria-labelledby="quemadoresModalLabel" aria-hidden="true" id="quemadoresModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
@@ -305,9 +325,13 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/carburacionesTesto500x458.jpg"/>
-            <p>CARBURACIONES CON EQUIPO ANALIZADOR TESTO</p>
-            <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#testoModal">Más Información</button>
+          <div class="servicios__catalogo__items-item">
+            <figure><img class="img-fluid" src="images/serviciosMobile/carburacionesTesto500x458.jpg"/>
+              <div class="servicios__catalogo__items-item-capa capa">
+                <h3> CARBURACIONES CON EQUIPO ANALIZADOR TESTO</h3>
+                <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#testoModal">Más Información</button>
+              </div>
+            </figure>
             <div class="modal fade" tabindex="-1" aria-labelledby="testoModalLabel" aria-hidden="true" id="testoModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
@@ -330,9 +354,13 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/cursos500x458.jpg" alt=""/>
-            <p>CURSO BÁSICO DE OPERACIÓN <br>A CALDERAS</p>
-            <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#cursosModal">Más Información</button>
+          <div class="servicios__catalogo__items-item">
+            <figure><img class="img-fluid" src="images/serviciosMobile/cursos500x458.jpg" alt=""/>
+              <div class="servicios__catalogo__items-item-capa capa">
+                <h3>CURSO BÁSICO DE OPERACIÓN <br>A CALDERAS</h3>
+                <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#cursosModal">Más Información</button>
+              </div>
+            </figure>
             <div class="modal fade" tabindex="-1" aria-labelledby="cursosModalLabel" aria-hidden="true" id="cursosModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
@@ -355,9 +383,13 @@
               </div>
             </div>
           </div>
-          <div class="servicios__catalogo__items-item"><img class="img-fluid" src="images/serviciosMobile/serviciosAdicionales500x458.jpg"/>
-            <p>SERVICIOS ADICIONALES</p>
-            <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#adicionalesModal">Más Información</button>
+          <div class="servicios__catalogo__items-item">
+            <figure><img class="img-fluid" src="images/serviciosMobile/serviciosAdicionales500x458.jpg"/>
+              <div class="servicios__catalogo__items-item-capa capa">
+                <h3>SERVICIOS ADICIONALES</h3>
+                <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#adicionalesModal">Más Información</button>
+              </div>
+            </figure>
             <div class="modal fade" tabindex="-1" aria-labelledby="adicionalesModalLabel" aria-hidden="true" id="adicionalesModal">
               <div class="modal-dialog modal-dialog-centered modal-xl modal-xl">
                 <div class="modal-content">
