Se quitó esa diagonal para que se viera la imagen en el repo

--- a/contacto.html
+++ b/contacto.html
@@ -73,7 +73,7 @@
       </div>
       <div class="contacto__convencer">
         <picture>
-          <source media="(min-width:1110px)" srcset="/images/PNG/fondoContactenos-left-Desk.png"/>
+          <source media="(min-width:1110px)" srcset="images/PNG/fondoContactenos-left-Desk.png"/>
           <source class="img-fluid" media="(min-width:768px)" srcset="images/PNG/fondoContactenos-left.png"/><img class="img-fluid" src="images/PNG/fondoContactenos2.png" alt="Ingeniero con casco"/>
         </picture>
         <p>Contáctenos y déjese convencer por nuestra amplia experiencia.</p>
@@ -150,5 +150,6 @@
     <script src="js/app-dist.js"></script>
     <script src="js/arriba.js"></script>
     <script src="js/limpiar.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
