--- a/productos.html
+++ b/productos.html
@@ -57,17 +57,46 @@
 <p class="title">MARCAS</p>
 <div class="carousel slide carousel__mobile" data-bs-ride="carousel" id="carouselExampleControls">
   <div class="carousel-inner">
-    <div class="carousel-item active"><img class="d-block w-100" src="images/Marcas/ALLANSON.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/ASCO.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/CLEAVERBROOKS.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/ECOFLAM.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/GRUNDFOS.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/HONEYWELL.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/METRON.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/PICSA.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/SENTINEL.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/VAYREMEX.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/Marcas/VIKING-PUMP.jpg"/></div>
+    <div class="carousel-item active">
+      <!--img(src="images/Marcas/ALLANSON.jpg").d-block.w-100-->
+      <h2 class="carousel__marcasTxt">ALLANSON</h2>
+    </div>
+    <div class="carousel-item">
+      <!--img(src="images/Marcas/ASCO.jpg").d-block.w-100-->
+      <h2 class="carousel__marcasTxt">ASCO</h2>
+    </div>
+    <div class="carousel-item">
+      <!--img(src="images/Marcas/CLEAVERBROOKS.jpg").d-block.w-100-->
+      <h2 class="carousel__marcasTxt">CLEAVER BROOKS</h2>
+    </div>
+    <div class="carousel-item">
+      <!--img(src="images/Marcas/ECOFLAM.jpg").d-block.w-100-->
+      <h2 class="carousel__marcasTxt">ECOFLAM</h2>
+    </div>
+    <div class="carousel-item">
+      <!--img(src="images/Marcas/GRUNDFOS.jpg").d-block.w-100-->
+      <h2 class="carousel__marcasTxt">HONEYWELL</h2>
+    </div>
+    <div class="carousel-item">
+      <!--img(src="images/Marcas/HONEYWELL.jpg").d-block.w-100-->
+      <h2 class="carousel__marcasTxt">METRON</h2>
+    </div>
+    <div class="carousel-item">
+      <!--img(src="images/Marcas/METRON.jpg").d-block.w-100-->
+      <h2 class="carousel__marcasTxt">PICSA</h2>
+    </div>
+    <div class="carousel-item">
+      <!--img(src="images/Marcas/PICSA.jpg").d-block.w-100-->
+      <h2 class="carousel__marcasTxt">VAYREMEX</h2>
+    </div>
+    <div class="carousel-item">
+      <!--img(src="images/Marcas/SENTINEL.jpg").d-block.w-100-->
+      <h2 class="carousel__marcasTxt">SENTINEL</h2>
+    </div>
+    <div class="carousel-item">
+      <!--img(src="images/Marcas/VAYREMEX.jpg").d-block.w-100-->
+      <h2 class="carousel__marcasTxt">VIKING PUMP</h2>
+    </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
@@ -92,9 +121,7 @@
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
 </div>
-<div class="marcas__propiedad"> 
-  <p>*Todas las marcas así como los logotipos mostrados son propiedad de sus respectivos propietarios, <br/> <strong>SERVICIO TÉCNICO A CALDERAS</strong> los utiliza con fines informativos e ilustrativos.</p>
-</div>
+<div class="marcas__propiedad"> </div>
       </div>
       <p class="title2">CATÁLOGO DE PRODUCTOS</p>
       <div class="productos__catalogo"> 
