Listos los camios de servicios mobile

--- a/servicios.html
+++ b/servicios.html
@@ -107,7 +107,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"> <a data-bs-dismiss="modal" aria-label="Close"><img src="images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">DISEÑO DE CUARTO <br>DE MÁQUINAS</p>
+                    <p class="modal-title" id="exampleModalLabel">DISEÑO DE CUARTO DE MÁQUINAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -127,7 +127,7 @@
           <div class="servicios__catalogo__items-item">
             <figure> <img class="img-fluid" src="images/serviciosMobile/instalacionCalderas500x458.jpg"/>
               <div class="servicios__catalogo__items-item-capa capa">
-                <h3>INSTALACIÓN DE CALDERAS <br/>Y <br/>EQUIPOS AUXILIARES</h3>
+                <h3>INSTALACIÓN DE CALDERAS Y EQUIPOS AUXILIARES</h3>
                 <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#hollinModal">Más Información</button>
               </div>
             </figure>
@@ -136,7 +136,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">INSTALACIÓN DE CALDERAS <br/>Y <br/>EQUIPOS AUXILIARES</p>
+                    <p class="modal-title" id="exampleModalLabel">INSTALACIÓN DE CALDERAS Y EQUIPOS AUXILIARES</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -170,7 +170,7 @@
           <div class="servicios__catalogo__items-item">
             <figure><img class="img-fluid" src="images/serviciosMobile/MttoCalderas500x458.jpg" alt=""/>
               <div class="servicios__catalogo__items-item-capa capa">
-                <h3>MANTENIMIENTO PREVENTIVO <br/>Y <br/>CORRECTIVO A CALDERAS</h3>
+                <h3>MANTENIMIENTO PREVENTIVO Y CORRECTIVO A CALDERAS</h3>
                 <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#mttoModal">Más Información</button>
               </div>
             </figure>
@@ -179,7 +179,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO <br/>Y <br/>CORRECTIVO A CALDERAS</p>
+                    <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO Y CORRECTIVO A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -245,7 +245,7 @@
           <div class="servicios__catalogo__items-item">
             <figure><img class="img-fluid" src="images/serviciosMobile/conversionCalderas500x458.jpg"/>
               <div class="servicios__catalogo__items-item-capa capa">
-                <h3>CONVERSIÓN DE <br>COMBUSTIBLES A CALDERAS</h3>
+                <h3>CONVERSIÓN DE COMBUSTIBLES A CALDERAS</h3>
                 <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#conversionModal">Más Información</button>
               </div>
             </figure>
@@ -291,7 +291,7 @@
           <div class="servicios__catalogo__items-item">
             <figure><img class="img-fluid" src="images/serviciosMobile/quemadores500x458.jpg"/>
               <div class="servicios__catalogo__items-item-capa capa">
-                <h3>MANTENIMIENTO PREVENTIVO <br/>Y<br/> CORRECTIVO A QUEMADORES</h3>
+                <h3>MANTENIMIENTO PREVENTIVO Y CORRECTIVO A QUEMADORES</h3>
                 <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#quemadoresModal">Más Información</button>
               </div>
             </figure>
@@ -300,7 +300,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO <br/>Y<br/> CORRECTIVO A QUEMADORES</p>
+                    <p class="modal-title" id="exampleModalLabel">MANTENIMIENTO PREVENTIVO Y CORRECTIVO A QUEMADORES</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
@@ -357,7 +357,7 @@
           <div class="servicios__catalogo__items-item">
             <figure><img class="img-fluid" src="images/serviciosMobile/cursos500x458.jpg" alt=""/>
               <div class="servicios__catalogo__items-item-capa capa">
-                <h3>CURSO BÁSICO DE OPERACIÓN <br>A CALDERAS</h3>
+                <h3>CURSO BÁSICO DE OPERACIÓN A CALDERAS</h3>
                 <button class="btn btn-primary btn-modal btn-servicios" type="button" data-bs-toggle="modal" data-bs-target="#cursosModal">Más Información</button>
               </div>
             </figure>
@@ -366,7 +366,7 @@
                 <div class="modal-content">
                   <div class="modal-content-close"><a data-bs-dismiss="modal" aria-label="Close"><img src="images/Iconos/circle-xmark-solid.svg"/></a></div>
                   <div class="modal-content-header">
-                    <p class="modal-title" id="exampleModalLabel">CURSO BÁSICO DE OPERACIÓN <br>A CALDERAS</p>
+                    <p class="modal-title" id="exampleModalLabel">CURSO BÁSICO DE OPERACIÓN A CALDERAS</p>
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
