Listos los cambios mobile, se quitaron los logos completamente

--- a/calderas.html
+++ b/calderas.html
@@ -51,7 +51,8 @@
       </div>
       <p class="title">VENTA DE CALDERAS</p>
       <div class="calderas__venta"> 
-        <p>Venta de calderas industriales de la marca:</p><img src="images/Marcas/Cleaver.png" alt="Logo de CleaverBrooks"/>
+        <p>Venta de calderas industriales de la marca:</p>
+        <h2 class="carousel__marcasTxt">CLEAVER BROOKS</h2>
       </div>
       <div class="calderas__carousel">
         <div class="carousel slide" data-bs-ride="carousel" id="carouselExampleIndicators">
