--- a/index.html
+++ b/index.html
@@ -59,19 +59,6 @@
               <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
               <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
             </picture>
-            <div class="slide2__Content">
-              <div class="slide2__Content__box">
-                <p class="slide2__Content__box-line1">MANTENIMIENTO PREVENTIVO <br/>Y<br/> CORRECTIVO</p>
-                <p class="slide2__Content__box-line2">CONVERSIONES <br/>Y<br/> CARBURACIONES</p>
-                <p class="slide2__Content__box-line3">AUTOMATIZACIÓN <br/>DE<br/> CALDERAS</p><a class="slide2__Content__box-line4" href="servicios.html">Servicios</a>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <picture class="carousel-item__img">
-              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
-              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
-            </picture>
             <div class="slide3__Content">
               <div class="slide3__Content__box">
                 <p class="slide3__Content__box-line1">SUMINISTRO DE<br/><strong>REFACCIONES <br/> ORIGINALES</strong> </p><a class="slide3__Content__box-line2" href="productos.html">Productos</a>
@@ -210,11 +197,21 @@
 </div>
 <div class="carousel slide carousel__tablet" data-bs-ride="carousel" id="carouselExampleControls1">
   <div class="carousel-inner">
-    <div class="carousel-item active"><img class="d-block w-100" src="images/carousel/1.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/carousel/2.jpg"/></div>
-    <div class="carousel-item"> <img class="d-block w-100" src="images/carousel/3.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/carousel/4.jpg"/></div>
-    <div class="carousel-item">       <img class="d-block w-100" src="images/carousel/5.jpg"/></div>
+    <div class="carousel-item active">
+      <h2 class="carousel__marcasTxt">ALLANSON   -   ASCO</h2>
+    </div>
+    <div class="carousel-item">
+      <h2 class="carousel__marcasTxt">CLEAVER BROOKS  -   ECOFLAM</h2>
+    </div>
+    <div class="carousel-item">
+      <h2 class="carousel__marcasTxt">HONEYWELL  -   METRON</h2>
+    </div>
+    <div class="carousel-item">
+      <h2 class="carousel__marcasTxt">PICSA  -   VAYREMEX</h2>
+    </div>
+    <div class="carousel-item">
+      <h2 class="carousel__marcasTxt">SENTINEL  -   VIKING PUMP</h2>
+    </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
