--- a/marcas.html
+++ b/marcas.html
@@ -48,11 +48,21 @@
 </div>
 <div class="carousel slide carousel__tablet" data-bs-ride="carousel" id="carouselExampleControls1">
   <div class="carousel-inner">
-    <div class="carousel-item active"><img class="d-block w-100" src="images/carousel/1.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/carousel/2.jpg"/></div>
-    <div class="carousel-item"> <img class="d-block w-100" src="images/carousel/3.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/carousel/4.jpg"/></div>
-    <div class="carousel-item">       <img class="d-block w-100" src="images/carousel/5.jpg"/></div>
+    <div class="carousel-item active">
+      <h2 class="carousel__marcasTxt">ALLANSON   -   ASCO</h2>
+    </div>
+    <div class="carousel-item">
+      <h2 class="carousel__marcasTxt">CLEAVER BROOKS  -   ECOFLAM</h2>
+    </div>
+    <div class="carousel-item">
+      <h2 class="carousel__marcasTxt">HONEYWELL  -   METRON</h2>
+    </div>
+    <div class="carousel-item">
+      <h2 class="carousel__marcasTxt">PICSA  -   VAYREMEX</h2>
+    </div>
+    <div class="carousel-item">
+      <h2 class="carousel__marcasTxt">SENTINEL  -   VIKING PUMP</h2>
+    </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
