--- a/productos.html
+++ b/productos.html
@@ -124,9 +124,15 @@
 </div>
 <div class="carousel slide carousel__desktop" data-bs-ride="carousel">
   <div class="carousel-inner">
-    <div class="carousel-item active"><img class="d-block w-100" src="images/carousel/desktop/1.jpg"/></div>
-    <div class="carousel-item"><img class="d-block w-100" src="images/carousel/desktop/2.jpg"/></div>
-    <div class="carousel-item"> <img class="d-block w-100" src="images/carousel/desktop/3.jpg"/></div>
+    <div class="carousel-item active">
+      <h2 class="carousel__marcasTxt">ALLANSON - ASCO - CLEAVER BROOKS                    </h2>
+    </div>
+    <div class="carousel-item">
+      <h2 class="carousel__marcasTxt">ECOFLAM - HONEYWELL - METRON                    </h2>
+    </div>
+    <div class="carousel-item">
+      <h2 class="carousel__marcasTxt">PICSA - VAYREMEX - SENTINEL  -   VIKING PUMP              </h2>
+    </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
   </div>
