--- a/servicios.html
+++ b/servicios.html
@@ -68,7 +68,7 @@
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="9" aria-label="Slide 10"><img class="d-block w-100 img-fluid" src="images/FotosServicios/10.jpg"/></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="10" aria-label="Slide 11"><img class="d-block w-100 img-fluid" src="images/FotosServicios/11.jpg"/></button>
           </div>
-          <div class="carousel-inner"> 
+          <div class="carousel-inner carousel-inner-images"> 
             <div class="carousel-item active"><img class="d-block w-100" src="images/FotosServicios/1.jpg"/></div>
             <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/2.jpg"/></div>
             <div class="carousel-item"> <img class="d-block w-100" src="images/FotosServicios/3.jpg"/></div>
