Listos ultimos cambios de mobile

--- a/servicios.html
+++ b/servicios.html
@@ -140,7 +140,7 @@
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
-                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="images/Single/hollin.jpg" alt="Hollin"/><img class="img-fluid" src="images/Single/instalacionCalderasEquiposAux.jpg" alt="Hollin"/></div>
+                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid margin-topd" src="images/Single/hollin.jpg" alt="Hollin"/><img class="img-fluid margin-topd" src="images/Single/instalacionCalderasEquiposAux.jpg" alt="Hollin"/></div>
                     </div>
                     <div class="modal-content-body-content">
                       <p>Desmontaje, colocación, instalación, arranque de calderas y calentadores así como de:</p>
@@ -341,7 +341,7 @@
                   </div>
                   <div class="modal-content-body">
                     <div class="modal-content-body-sidebar"> 
-                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid" src="images/Single/testo1.jpg"/><img class="img-fluid" src="images/Single/testo2.jpg"/></div>
+                      <div class="modal-content-body-sidebar__images"> <img class="img-fluid margin-topd" src="images/Single/testo1.jpg"/><img class="img-fluid margin-topd" src="images/Single/testo2.jpg"/></div>
                     </div>
                     <div class="modal-content-body-content">
                       <p>Carburación con equipo analizador de gases de combustión marca Testo para sistemas mecánicos y electrónicos.</p>
