--- a/index.html
+++ b/index.html
@@ -50,7 +50,18 @@
             <div class="slideA__Content"> 
               <div class="slideA__Content__box"><img class="img-fluid slideA_logo" src="images/SVG/logoSertec.svg"/>
                 <p class="slideA__Content__box-txtservicio">CENTRO DE SERVICIO</p>
-                <p class="slideA__Content__box-txtsomos">SOMOS ESPECIALISTAS EN CALDERAS <br/>CLEAVER BROOKS</p><a class="slideA__Content__box-cta" href="contacto.html">Contáctenos</a>
+                <p class="slideA__Content__box-txtsomos">SOMOS ESPECIALISTAS EN CALDERAS <br/> <strong>CLEAVER BROOKS</strong></p><a class="slideA__Content__box-cta" href="contacto.html">Contáctenos</a>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <picture class="carousel-item__img">
+              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
+              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
+            </picture>
+            <div class="slideB__Content"> 
+              <div class="slideB__Content__box">
+                <p>SOMOS <br/><strong>ESPECIALISTAS EN CALDERAS</strong></p><img class="img-fluid slideB_logoCleaver" src="images/Marcas/Cleaver.png"/><a class="slideB__Content__box-cta" href="contacto.html">Contáctenos</a>
               </div>
             </div>
           </div>
