Listos los cambios tablet

--- a/index.html
+++ b/index.html
@@ -59,17 +59,6 @@
               <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
               <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
             </picture>
-            <div class="slideB__Content"> 
-              <div class="slideB__Content__box">
-                <p>SOMOS <br/><strong>ESPECIALISTAS EN CALDERAS</strong></p><img class="img-fluid slideB_logoCleaver" src="images/Marcas/Cleaver.png"/><a class="slideB__Content__box-cta" href="contacto.html">Contáctenos</a>
-              </div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <picture class="carousel-item__img">
-              <source media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg"/>
-              <source media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg"/><img class="d-block w-100 img-fluid" src="images/slidesMobile/slide1-480x565.jpg"/>
-            </picture>
             <div class="slide2__Content">
               <div class="slide2__Content__box">
                 <p class="slide2__Content__box-line1">MANTENIMIENTO PREVENTIVO <br/>Y<br/> CORRECTIVO</p>
@@ -222,19 +211,19 @@
 <div class="carousel slide carousel__tablet" data-bs-ride="carousel" id="carouselExampleControls1">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <h2 class="carousel__marcasTxt">ALLANSON   -   ASCO</h2>
+      <h2 class="carousel__marcasTxt">ALLANSON   <strong>-</strong>   ASCO</h2>
     </div>
     <div class="carousel-item">
-      <h2 class="carousel__marcasTxt">CLEAVER BROOKS  -   ECOFLAM</h2>
+      <h2 class="carousel__marcasTxt">CLEAVER BROOKS  <strong>-</strong>   ECOFLAM</h2>
     </div>
     <div class="carousel-item">
-      <h2 class="carousel__marcasTxt">HONEYWELL  -   METRON</h2>
+      <h2 class="carousel__marcasTxt">HONEYWELL  <strong>-</strong>   METRON</h2>
     </div>
     <div class="carousel-item">
-      <h2 class="carousel__marcasTxt">PICSA  -   VAYREMEX</h2>
+      <h2 class="carousel__marcasTxt">PICSA  <strong>-</strong>   VAYREMEX</h2>
     </div>
     <div class="carousel-item">
-      <h2 class="carousel__marcasTxt">SENTINEL  -   VIKING PUMP</h2>
+      <h2 class="carousel__marcasTxt">SENTINEL  <strong>-</strong>   VIKING PUMP</h2>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
@@ -243,13 +232,13 @@
 <div class="carousel slide carousel__desktop" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <h2 class="carousel__marcasTxt">ALLANSON - ASCO - CLEAVER BROOKS                    </h2>
+      <h2 class="carousel__marcasTxt">ALLANSON <strong>-</strong> ASCO <strong>-</strong> CLEAVER BROOKS                    </h2>
     </div>
     <div class="carousel-item">
-      <h2 class="carousel__marcasTxt">ECOFLAM - HONEYWELL - METRON                    </h2>
+      <h2 class="carousel__marcasTxt">ECOFLAM <strong>-</strong> HONEYWELL <strong>-</strong> METRON                    </h2>
     </div>
     <div class="carousel-item">
-      <h2 class="carousel__marcasTxt">PICSA - VAYREMEX - SENTINEL  -   VIKING PUMP              </h2>
+      <h2 class="carousel__marcasTxt">PICSA <strong>-</strong> VAYREMEX <strong>-</strong> SENTINEL  <strong>-</strong>   VIKING PUMP              </h2>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
