--- a/marcas.html
+++ b/marcas.html
@@ -49,19 +49,19 @@
 <div class="carousel slide carousel__tablet" data-bs-ride="carousel" id="carouselExampleControls1">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <h2 class="carousel__marcasTxt">ALLANSON   -   ASCO</h2>
+      <h2 class="carousel__marcasTxt">ALLANSON   <strong>-</strong>   ASCO</h2>
     </div>
     <div class="carousel-item">
-      <h2 class="carousel__marcasTxt">CLEAVER BROOKS  -   ECOFLAM</h2>
+      <h2 class="carousel__marcasTxt">CLEAVER BROOKS  <strong>-</strong>   ECOFLAM</h2>
     </div>
     <div class="carousel-item">
-      <h2 class="carousel__marcasTxt">HONEYWELL  -   METRON</h2>
+      <h2 class="carousel__marcasTxt">HONEYWELL  <strong>-</strong>   METRON</h2>
     </div>
     <div class="carousel-item">
-      <h2 class="carousel__marcasTxt">PICSA  -   VAYREMEX</h2>
+      <h2 class="carousel__marcasTxt">PICSA  <strong>-</strong>   VAYREMEX</h2>
     </div>
     <div class="carousel-item">
-      <h2 class="carousel__marcasTxt">SENTINEL  -   VIKING PUMP</h2>
+      <h2 class="carousel__marcasTxt">SENTINEL  <strong>-</strong>   VIKING PUMP</h2>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
@@ -70,13 +70,13 @@
 <div class="carousel slide carousel__desktop" data-bs-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <h2 class="carousel__marcasTxt">ALLANSON - ASCO - CLEAVER BROOKS                    </h2>
+      <h2 class="carousel__marcasTxt">ALLANSON <strong>-</strong> ASCO <strong>-</strong> CLEAVER BROOKS                    </h2>
     </div>
     <div class="carousel-item">
-      <h2 class="carousel__marcasTxt">ECOFLAM - HONEYWELL - METRON                    </h2>
+      <h2 class="carousel__marcasTxt">ECOFLAM <strong>-</strong> HONEYWELL <strong>-</strong> METRON                    </h2>
     </div>
     <div class="carousel-item">
-      <h2 class="carousel__marcasTxt">PICSA - VAYREMEX - SENTINEL  -   VIKING PUMP              </h2>
+      <h2 class="carousel__marcasTxt">PICSA <strong>-</strong> VAYREMEX <strong>-</strong> SENTINEL  <strong>-</strong>   VIKING PUMP              </h2>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="prev"><span class="carousel-control-prev-icon" aria-hidden="true"></span><span class="visually-hidden">Previous</span></button>
     <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls1" data-bs-slide="next"><span class="carousel-control-next-icon" aria-hidden="true"></span><span class="visually-hidden">Next</span></button>
