--- a/calderas.html
+++ b/calderas.html
@@ -56,14 +56,14 @@
       </div>
       <div class="calderas__carousel">
         <div class="carousel slide" data-bs-ride="carousel" id="carouselExampleIndicators">
-          <div class="carousel-indicators"> 
+          <div class="carousel-indicators carousel-indicatorsCalderas">
             <button class="active" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" aria-current="true" aria-label="Slide 1"><img class="d-block w-100" src="images/Calderas/caldera-1-1200x600.jpg"/></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"><img class="d-block w-100" src="images/Calderas/caldera-2-1200x600.jpg"/></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"><img class="d-block w-100" src="images/Calderas/caldera-3-1200x600.jpg"/></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"><img class="d-block w-100" src="images/Calderas/caldera-4-1200x600.jpg"/></button>
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4" aria-label="Slide 5"><img class="d-block w-100" src="images/Calderas/caldera-5-1200x600.jpg"/></button>
           </div>
-          <div class="carousel-inner carousel-inner-images"> 
+          <div class="carousel-inner carousel-inner-imagesCalderas">
             <div class="carousel-item active"> <img class="d-block w-100" src="images/Calderas/caldera-1-1200x600.jpg"/></div>
             <div class="carousel-item"> <img class="d-block w-100" src="images/Calderas/caldera-2-1200x600.jpg"/></div>
             <div class="carousel-item"> <img class="d-block w-100" src="images/Calderas/caldera-3-1200x600.jpg"/></div>
