Listos los slides en Escritorio

--- a/index.html
+++ b/index.html
@@ -142,19 +142,19 @@
           <div class="index__area__prioridad__items-item">
             <div class="box-img"> <img class="img-fluid" src="images/SVG/engrane.svg"/></div>
             <div class="box-txt">
-              <p>SERVICIOS</p><a href="servicios.html">Más información </a>
+              <p>SERVICIOS</p><a href="servicios.html"><strong>Más información</strong> </a>
             </div>
           </div>
           <div class="index__area__prioridad__items-item index__area__prioridad__items-item-m">
             <div class="box-img"><img class="img-fluid" src="images/SVG/manometro.svg"/></div>
             <div class="box-txt">
-              <p>PRODUCTOS</p><a href="productos.html">Más información </a>
+              <p>PRODUCTOS</p><a href="productos.html"><strong>Más información</strong> </a>
             </div>
           </div>
           <div class="index__area__prioridad__items-item">
             <div class="box-img"> <img class="img-fluid" src="images/SVG/caldera.svg"/></div>
             <div class="box-txt">
-              <p>CALDERAS</p><a href="calderas.html">Más información</a>
+              <p>CALDERAS</p><a href="calderas.html"><strong>Más información</strong> </a>
             </div>
           </div>
         </div>
