Cambios solicitados en el archivo 3.pdf

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </picture>
             <div class="slide1__Content">
               <div class="slide1__Content__box">
-                <p class="slide1__Content__box-line1">30 años</p>
+                <p class="slide1__Content__box-line1">Más de <br/>30 años</p>
                 <p class="slide1__Content__box-line2"><strong>DE EXPERIENCIA <br/>NOS RESPALDAN</strong> </p><a class="slide1__Content__box-line3" href="empresa.html">Conózcanos     </a>
               </div>
             </div>
@@ -132,12 +132,12 @@
       </div>
       <div class="index__area__experiencia">
         <div class="index__area__experiencia-txt"> 
-          <p>La experiencia profesional de 30 años de servicio nos respaldan para ayudarle a seleccionar el <strong>equipo industrial</strong> más adecuado a sus necesidades, así como también para brindarle la solución más idónea a sus problemas de operación en <strong>calderas</strong>, lo cual nos permite sin lugar a dudas ofrecer servicios y productos de las más alta calidad a nuestros clientes como una opción seria y confiable.</p>
+          <p>La experiencia profesional de más de 30 años de servicio nos respaldan para ayudarle a seleccionar el <strong>equipo industrial</strong> más adecuado a sus necesidades, así como también para brindarle la solución más idónea a sus problemas de operación en <strong>calderas</strong>, lo cual nos permite sin lugar a dudas ofrecer servicios y productos de las más alta calidad a nuestros clientes como una opción seria y confiable.</p>
         </div>
         <div class="index__area__experiencia-img"> <img class="img-fluid" src="images/experiencia.jpg" alt="Ingeniero colocando una caldera"/></div>
       </div>
       <div class="index__area__prioridad"> 
-        <p class="index__area__prioridad__title">En <strong>SERVICIO TÉCNICO A CALDERAS</strong> nuestra prioridad es usted por lo que le ofrecemos:</p>
+        <p class="index__area__prioridad__title">En <strong>SERVICIO TÉCNICO A CALDERAS</strong> nuestra prioridad es usted, por lo que, le ofrecemos:</p>
         <div class="index__area__prioridad__items">
           <div class="index__area__prioridad__items-item">
             <div class="box-img"> <img class="img-fluid" src="images/SVG/engrane.svg"/></div>
